--- a/views/pizza.html
+++ b/views/pizza.html
@@ -3,7 +3,7 @@
 <head>  
   <meta name = "viewport" content = "width=device-width, initial-scale=1">
   <!--<link rel="stylesheet" href="css/style.css">-->
-  <!---main CSS included as an internal stylesheet instead of an external file--->
+  <!--main CSS included as an internal stylesheet instead of an external file-->
   <style>
 	/** {
 	  outline: 1px solid red !important;
@@ -30,7 +30,8 @@
 	#pizzaSize {
 	  font-weight: 800;
 	}
-    /*Some values taken from the final function in main.js, to specify the mover class' size values and the image URL in the CSS itself*/
+    /*Some values taken from the final function in main.js, to specify fixed style properties of the mover class
+    in the CSS itself*/
 	.mover {
 		position: fixed;
 	    z-index: -1;
@@ -64,7 +65,7 @@
   </style>
   <meta charset="UTF-8">
   <!--<link rel="stylesheet" href="css/bootstrap-grid-min.css">-->
-  <!---minified bootstrap css file is linked to later in this file in a JS function--->
+  <!--minified bootstrap css file is linked to later in this file in a JS function-->
 </head>
 
 <body>
